deploy/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    name: apps
---
apiVersion: v1
kind: Namespace
metadata:
  name: data
  labels:
    name: dataa
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    name: ingress
