deploy/traefik-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: ingress
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
        name: traefik
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: admin
          containerPort: 8888
        volumeMounts:
        - mountPath: /etc/traefik
          name: config-volume
      volumes:
      - name: config-volume
        configMap:
          name: traefik-conf
---
kind: Service
apiVersion: v1
metadata:
  name: traefik
  namespace: ingress
spec:
  selector:
    app: traefik
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 443
      targetPort: 8443
      name: https
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: traefik-web-ui
#  namespace: ingress
#spec:
#  selector:
#    app: traefik
#  ports:
#  - name: web
#    port: 80
#    targetPort: 8080
