deploy/traefik-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: app
spec:
  rules:
  - host: dattore.me
    http:
      paths:
      - path: /
        backend:
          serviceName: rocket-svc
          servicePort: 8080
